// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TipInfoForm should render correct for multiple elements 1`] = `
<div
  className="container"
>
  <nav
    class="navbar navbar-light bg-light"
  >
    <form
      class="form-inline"
      onSubmit={[Function]}
    >
      <input
        aria-label="Search"
        class="form-control mr-sm-2"
        onChange={[Function]}
        placeholder="Search Company"
        type="search"
      />
      <button
        class="btn btn-outline-success my-2 my-sm-0"
        type="submit"
      >
        Search
      </button>
    </form>
  </nav>
  <div
    className="container"
  >
    <div
      className="card avgTipsByBusiness bg-dark mb-3"
    >
      <h5
        className="card-header text-left text-white bg-success mb-3"
      >
        Poolinos
      </h5>
      <div
        className="text-white text-right bg-dark mb-3"
      >
        Average Tips: $
        16.36
         / Hour
      </div>
      <button
        class="btn btn-outline-info"
        onClick={[Function]}
        type="button"
      >
        View details
      </button>
    </div>
  </div>
</div>
`;

exports[`TipInfoForm should render correct for single element 1`] = `
<div
  className="container"
>
  <nav
    class="navbar navbar-light bg-light"
  >
    <form
      class="form-inline"
      onSubmit={[Function]}
    >
      <input
        aria-label="Search"
        class="form-control mr-sm-2"
        onChange={[Function]}
        placeholder="Search Company"
        type="search"
      />
      <button
        class="btn btn-outline-success my-2 my-sm-0"
        type="submit"
      >
        Search
      </button>
    </form>
  </nav>
  <div
    className="container"
  >
    <div
      className="card avgTipsByBusiness bg-dark mb-3"
    >
      <h5
        className="card-header text-left text-white bg-success mb-3"
      >
        Poolinos
      </h5>
      <div
        className="text-white text-right bg-dark mb-3"
      >
        Average Tips: $
        17.4
         / Hour
      </div>
      <button
        class="btn btn-outline-info"
        onClick={[Function]}
        type="button"
      >
        View details
      </button>
    </div>
  </div>
</div>
`;
